Fixes #23571: Rudder installation : rudder repository documentation update